fix CategorySection header overflow

--- a/client/src/components/ControlPanel/CategorySection/CategorySection.scss
+++ b/client/src/components/ControlPanel/CategorySection/CategorySection.scss
@@ -1,6 +1,7 @@
 .control-panel__category-section {
     text-align: center;
     padding   : 0.8em;
+    overflow  : auto;
 
     & .header {
         float       : left;
